# vscode-bigquery

./: .eslintrc.js  .gitignore  .npmrc  .vscodeignore  CHANGELOG.md  LICENSE  README.md  bqsql-language-configuration.json  chart.html  chart2.html  commands.txt  information_schema.bqsql  package-lock.json  package.json  perspective.htm  test_complex_nested.bqsql  test_parse2.js  todo.md  tsconfig.json  util.md  webpack.config.js
.github/workflows/: codeql.yml  main.yml  publish.yml  test.yml
bqsql_parser/: Cargo.toml  README.md  compile_and_copy.sh  test.js
bqsql_parser/src/: bqsql_document.rs  bqsql_function.rs  lib.rs
bqsql_parser/src/bqsql_document/: bqsql_delimiter.rs  bqsql_interpreter.rs  bqsql_interpreter_query.rs  bqsql_interpreter_query_from_test.rs  bqsql_interpreter_query_full_test.rs  bqsql_interpreter_query_select_test.rs  bqsql_interpreter_suggest.rs  bqsql_keyword.rs  bqsql_operator.rs  bqsql_query_structure.rs  parser.rs  token_parser.rs
bqsql_parser/src/bqsql_document/query_files/: queries.bqsql
grid_render/: Cargo.toml  compile_and_copy.sh  test.sh  webdriver.json
grid_render/resources/: bqscript.css  grid.css
grid_render/src/: event_listener.rs  external_request.rs  lib.rs  message_handler.rs  utils.rs
grid_render/src/bigquery/: base.rs  jobs.rs  mod.rs  table_data.rs  tables.rs
grid_render/src/custom_elements/: base_and_custom_element.md  base_element.rs  base_element_trait.rs  bq_common_custom_element.rs  bq_query_custom_element.rs  bq_script_custom_element.rs  bq_table.md  bq_table_custom_element.md  bq_table_custom_element.rs  bq_to_table.rs  custom_element_definition.rs  data_table_controls_element.rs  data_table_element.rs  data_table_shadow_element.rsxxx  mod.rs  query_results_with_controls.rs  table_plot.rs  table_v1.rs  table_v2.rs  table_with_controls.rs  to_table_builder.rs
grid_render/src/custom_elements/test_resources/: 100_rows.json  all_types_test.json  complex_nested_test.json  complex_object_array_test.json  complex_object_array_test2.json  complex_object_array_test3.json  get_jobs_with_error.json  no_rows.json  simple_array.json  simple_table.json  simple_table_data_list.json  struct_json_test.json
iframe_table_example/: base1.css  base2.css  iframe.html  index.html
resources/: grid.css  grid.js
resources/%5B::%5D:8000/: index.css
resources/language/: bqsql-language-configuration.json  bqsql.tmGrammar.json  snippets.json
resources/localhost:8000/: index.html
src/: bigquery-icons.ts  bigquery-query-runner.ts  bigquery-webview-panel-serializer.ts  bigquery-webview-view-provider.ts  bigqueryIcons.ts  extension-commands.ts  extension.ts  extensionCommands.ts  logger.ts  queryResultsMapping.d.ts
src/activitybar/: authentication-webview-view-provider.ts  authenticationGrid.ts  authenticationGrid.tsxxxx  authenticationTreeItem.ts  authenticationWebviewViewProvider.ts  authenticationWebviewViewProvider.tsxxx  authentication_grid.ts  bigquery-tree-data-provider.ts  bigqueryTreeItem.ts  gcpAuthenticationTreeDataProvider.ts  jobTreeDataProvider.ts  jobTreeItem.ts  tree-data-provider.ts  tree-item.ts  treeDataProvider.ts  treeItem.ts  troubleshootSerializer.ts
src/bigquery/: bigquery-query-runner.ts  simple_query_rows_response_error.d.ts
src/charts/: ResultsChartRenderRequest.d.ts  chart.html  chart2.html  chartGlobal.ts  chartRender.ts  chartResultsSerializer.ts  resultsChartRender.ts
src/language/: bqsql.tmGrammar.json  bqsqlCompletionItemProvider.ts  bqsqlCopilotParticipant.ts  bqsqlDiagnostics.ts  bqsqlDocument.d.ts  bqsqlDocument.ts  bqsqlDocumentSemanticTokensProvider.ts  bqsqlHoverProvider.ts  bqsqlInlayHintsProvider.ts  bqsqlInlineCompletionItemProvider.ts  bqsqlParser.ts  bqsqlSuggestion.d.ts  bqsqlTsParser.ts
src/notebook/: bqNotebookController.ts  bqNotebookSerializer.ts  bqnbController.ts  bqnbRenderer.ts  bqnbSerializer.ts
src/search/: searchCommand.ts  searchPanel.ts
src/services/: authentication-user-login-response.d.ts  authentication.ts  authenticationListItem.d.ts  bigquery-client.ts  bigqueryClient.ts  bigqueryJobError.d.ts  bigquerySearchService.ts  bigqueryTableSchema.d.ts  bigqueryTableSchemaService.ts  customTerminal.ts  dataplexSearchService.ts  queryGeneratorService.ts  queryResultsMapping.d.ts  queryResultsMappingService.ts  queryResultsVisualizationType.ts  resultsRender.ts  tableMetadata.d.ts  table_metadata.d.ts
src/tableResultsPanel/: downloadCsv.ts  downloadCsvRequest.d.ts  downloadJsonl.ts  queryResultsSerializer.ts  resultsGrid.ts  resultsGridRender.ts  resultsGridRenderRequest.d.ts  resultsGridRenderRequest.ts  resultsGridRenderRequestV2.d.ts  resultsGridRenderRequestV2.ts  schemaGrid.ts  schemaRender.ts  schema_render.ts  sendToPubsub.ts  tableResultsSerializer.ts
src/test/: runTest.ts
syntaxes/: bqsql.tmGrammar.json
(+15 files in other folders)
