[package]
name = "bqsql-parser"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2" }
serde-wasm-bindgen = "0.4.3"
lazy_static = "1.4.0"
regex = "1"