[package]
name = "grid_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"

features = [
    "console",
    "Window",
    "Document",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    # "DocumentFragment",
    # "Node",
    "Element",
    # "HtmlElement",
    # "HtmlFormElement",
    # "HtmlInputElement",
    # "HtmlSlotElement",
    # "HtmlTemplateElement",
    # "CustomElementRegistry",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "Event",
    "MessageEvent",
    # "SubmitEvent",
    "MutationObserver",
]

# [features]
# default = ["console_error_panic_hook", "wee_alloc"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
# opt-level = "z"
lto = true
