[package]
name = "grid_render"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "=0.6.1" # attempted update failed!
serde_json = "1.0"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
website_component_table = { git = "https://github.com/bstruct/website_component_table" }

[dependencies.web-sys]
version = "0.3"

features = [
    "console",
    "Window",
    "Document",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    # "DocumentFragment",
    # "Node",
    "Element",
    "HtmlElement",
    # "HtmlCollection",
    # "HtmlFormElement",
    # "HtmlInputElement",
    # "HtmlSlotElement",
    # "HtmlTemplateElement",
    # "CustomElementRegistry",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "Event",
    "CustomEventInit",
    "CustomEvent",
    "MouseEvent",
    "MessageEvent",
    # "SubmitEvent",
    # "MutationObserver",
    # "MutationRecord"
]

# [features]
# default = ["console_error_panic_hook", "wee_alloc"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }

[profile.dev]
opt-level = 0
lto = false
debug = 2

[profile.release]
# opt-level = "s"
# # opt-level = "z"
opt-level = 3
lto = true
